--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -20,9 +20,9 @@
     "python.linting.enabled": true,
     "python.createEnvironment.contentButton": "show",
     "[python]": {
-        "editor.defaultFormatter": "ms-python.black-formatter"
+        "editor.defaultFormatter": "ms-python.python"
     },
-    "python.formatting.provider": "none",
+    "python.formatting.provider": "black",
     "pylint.args": [
         "--extension-pkg-whitelist=pytorch.*,torch.*",
         "--generated-members=torch",
