--- a/config.yaml
+++ b/config.yaml
@@ -2,12 +2,13 @@
 global:
   project_name: "sumo_mmrl"  # Name of the project
   entity: "aaronrls"         # User or team name
-
+logs:
+  path: "Logs/logs.csv"
 # Training configuration settings.
 training_settings:
-  episodes: 10000                       # The number of episodes to run
+  episodes: 50000                       # The number of episodes to run
   experiment_path: "Experiments/3x3/"
-  # experiment_path: "Experiments/balt1/"     # Path to the experiment directory
+  # experiment_path: "Experiments/balt3/"     # Path to the experiment directory
   sumoconfig: "Nets/3x3.sumocfg"    
   # sumoconfig: "Nets/osm.sumocfg"       # Configuration file for SUMO
   savepath: "models/"
@@ -24,10 +25,6 @@ env:
   num_of_people: 1                       # Default number of people in the environment
   types_of_passengers: 1                 # Default types or classes of passengers
 
-# Rendering and Simulation.
-rendering:
-  default_mode: "no_gui"                 # Default mode for rendering (gui, libsumo, no_gui)
-
 # Graph Output.
 graph_output:
   graph_path: "/Graphs/sumo-agent.png"  # Default path where learning curve graphs should be saved
@@ -42,7 +39,7 @@ optuna:
 agent_hyperparameters:
   learning_rate: 0.0001
   gamma: 0.9999                
-  epsilon_decay: 0.995
+  epsilon_decay: 0.9999
   batch_size: 128
   memory_size: 100000
   epsilon_max:  1.0
