has choice to just dropoff

--- a/config.yaml
+++ b/config.yaml
@@ -6,19 +6,19 @@ global:
 # Training configuration settings.
 training_settings:
   episodes: 20000               
-  # experiment_path: "Experiments/3x3/"
-  # sumoconfig: "Nets/3x3.sumocfg"    
-  experiment_path: "Experiments/balt3/"     
-  sumoconfig: "Nets/osm.sumocfg"       
+  experiment_path: "Experiments/3x3/"
+  sumoconfig: "Nets/3x3.sumocfg"    
+  # experiment_path: "Experiments/balt3/"     
+  # sumoconfig: "Nets/osm.sumocfg"       
   savepath: "models/"                                   
   initial_life: .15                     
   penalty: -0.2                        
             
 person_settings:
-  start: "-521985670#5"
-  destination: "192469470#0"
-  # start: "1w"
-  # destination: "10e"
+  # start: "-521985670#5"
+  # destination: "192469470#0"
+  start: "1w"
+  destination: "10e"
 
 # Environment settings.
 env:
