--- a/config.yaml
+++ b/config.yaml
@@ -28,14 +28,14 @@ env:
 
 # Optuna optimization settings.
 optuna:
-  n_trials: 20
+  n_trials: 100
   storage_path: "sqlite:///db.sqlite3"
   study_name: null                      
 
 agent_hyperparameters:
-  learning_rate: 0.00001
-  gamma: 0.9999                
-  epsilon_decay: 0.9995
+  learning_rate: [0.000001,0.000005,0.00001,0.00005,0.0001,0.0005]
+  gamma: [0.9,0.99,0.999,0.9999]                
+  epsilon_decay: [0.99,0.995,0.999,0.9995,0.9999,]
   batch_size: 512
   memory_size: 50000
   epsilon_max:  1.0
